--- a/composer.json
+++ b/composer.json
@@ -12,10 +12,10 @@
         }
     ],
     "require": {
-        "php": ">=5.3.2"
+        "php": ">=5.3.2",
+        "symfony/framework-bundle": "2.3.*",
     },
     "require-dev": {
-        "symfony/framework-bundle": "2.3.*",
         "symfony/finder": "2.3.*"
 
     },
