--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
     ],
     "require": {
         "php": ">=5.3.2",
-        "symfony/framework-bundle": "2.3.*",
+        "symfony/framework-bundle": "2.3.*"
     },
     "require-dev": {
         "symfony/finder": "2.3.*"
