--- a/.travis.yml
+++ b/.travis.yml
@@ -13,5 +13,5 @@ env:
 
 before_script:
   - curl -s http://getcomposer.org/installer | php
-  - composer require symfony/framework-bundle:${SYMFONY_VERSION} --no-update
-  - composer update --dev
+  - php composer.phar require symfony/framework-bundle:${SYMFONY_VERSION} --no-update
+  - php composer.phar update --dev
